edited UI mockup image to make it more clear

--- a/Proposal/Proposal.html
+++ b/Proposal/Proposal.html
@@ -1349,7 +1349,7 @@
     <p class="c8 c23 c24"><span class="c29"></span></p>
     <h1 class="c8 c20"><a name="h.cx2m1mwjanav"></a><span>Backup Plan</span></h1>
     <p class="c8 c30"><span>If our analysis and comparison of our data doesn&rsquo;t work out, we will work on the strict visualization of our New York dataset, making it as visually appealing and informative as possible.</span></p>
-    <h1 class="c15 c8"><a name="h.2z2jct7t4bm0"></a><span>Simple UI Mockup</span><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 580.20px; height: 783.83px;"><img alt="Proposal Image.jpg" src="images/image00.jpg" style="width: 580.20px; height: 783.83px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></h1>
+    <h1 class="c15 c8"><a name="h.2z2jct7t4bm0"></a><span>Simple UI Mockup</span><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 580.20px; height: 783.83px;"><img alt="Proposal Image.jpg" src="images/initial UI mockup.jpg" style="width: 580.20px; height: 783.83px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></h1>
     <a href="#" name="c5773e5da7ec38ee6d79cfe9d610f92869b9c348"></a>
     <a href="#" name="0"></a>
     <table cellpadding="0" cellspacing="0" class="c22">
