changed the link styling for pretty

--- a/Proposal/Proposal.html
+++ b/Proposal/Proposal.html
@@ -1073,8 +1073,8 @@
     }
 
     .c16 {
-        color: inherit;
-        text-decoration: inherit
+        /*color: inherit;
+        text-decoration: inherit*/
     }
 
     .c18 {
@@ -1084,7 +1084,7 @@
 
     .c3 {
         color: #1155cc;
-        text-decoration: underline
+        /*text-decoration: underline*/
     }
 
     .c32 {
@@ -1142,6 +1142,16 @@
         font-family: "Trebuchet MS";
         padding-bottom: 10pt;
         page-break-after: avoid
+    }
+
+    a {
+        text-decoration: none;
+        color: #48b;
+    }
+
+    a:hover{
+        color: #268;
+        text-decoration: underline;
     }
 
     li {
