more writeup updates - also added new database to the gitignore

--- a/writeup/index.html
+++ b/writeup/index.html
@@ -59,6 +59,9 @@
                         <a class="page-scroll" href="#methodology">Methodology</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#results">Results</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#download">Download</a>
                     </li>
                     <li>
@@ -168,6 +171,28 @@
                 <h3>Performance</h3>
                 <p>
                     With several million points of data within our stop-and-frisk database contributing to an interactive classification and visualization and being sent to and from the browser, performance was key.
+                </p>
+            </div>
+    </section>
+
+    <section id="results" class="container content-section text-center">
+        <div class="row">
+             <div class="col-lg-8 col-lg-offset-2">
+                <h2>Results</h2>
+                <h3>Classifier Output</h3>
+                <table class="table">
+                </table>
+
+                <h3>Visualization</h3>
+                <h4>Map</h4>
+                <p>
+                    After the user interacts with the drop down options, the map will automatically be populated with a variety of related information.
+                </p><p>
+                    Individual census tracts will be colored to reflect the likelihood with which an individual with the selected characteristics would be stopped and frisked by an officer in relation to the average person, in the month selected on the timeline below. The darker the color, the more likely a stop, as shown by the key to the right of the map.
+                </p><p>
+                    Users can explore individual census tracts by hovering over them, which will bring up a tooltip explaining where the tract is, what the exact likelihood is, the average income of the tract, the number of stop and frisk complaints against NYPD for that year, and the racial distribution of the tract. They can also click to zoom in and focus on the tract.
+                </p><p>
+                    Actual stop and frisk incidents from the NYPD database in the selected month will be displayed on the map in the form of dots. Red dots represent an arrest, and yellow dots represent an unfruitful stop and frisk. 
                 </p>
             </div>
     </section>
