more writeup things

--- a/writeup/index.html
+++ b/writeup/index.html
@@ -181,6 +181,32 @@
                 <h2>Results</h2>
                 <h3>Classifier Output</h3>
                 <table class="table">
+                    <tr>
+                        <th>Race/Sex</th>
+                        <th>Female</th>
+                        <th>Male</th>
+                    </tr>
+                    <tr>
+                        <th>Black</th>
+                        <td>0.619</td>
+                        <td>2.652</td>
+                    </tr>
+                    <tr>
+                        <th>White</th>
+                        <td>0.108</td>
+                        <td>0.910</td>
+                    </tr>
+                    <tr>
+                        <th>Hispanic</th>
+                        <td>0.291</td>
+                        <td>1.782</td>
+                    </tr>
+                    <tr>
+                        <th>Other</th>
+                        <td>0.122</td>
+                        <td>0.998</td>
+                    </tr>
+
                 </table>
 
                 <h3>Visualization</h3>
