--- a/writeup/index.html
+++ b/writeup/index.html
@@ -213,11 +213,17 @@
                 <h4>Map</h4>
                 <p>
                     After the user interacts with the drop down options, the map will automatically be populated with a variety of related information.
-                </p><p>
+                </p>
+                <img class="img-center full-map" src="img/map/map-plain-19-white-male.png"/>
+                <p>
                     Individual census tracts will be colored to reflect the likelihood with which an individual with the selected characteristics would be stopped and frisked by an officer in relation to the average person, in the month selected on the timeline below. The darker the color, the more likely a stop, as shown by the key to the right of the map.
-                </p><p>
+                </p>
+                <img class="img-center small-map" src="img/map/map-tooltip.png"/>
+                <p>
                     Users can explore individual census tracts by hovering over them, which will bring up a tooltip explaining where the tract is, what the exact likelihood is, the average income of the tract, the number of stop and frisk complaints against NYPD for that year, and the racial distribution of the tract. They can also click to zoom in and focus on the tract.
-                </p><p>
+                </p>
+                 <img class="img-center small-map" src="img/map/map-arrests-24-black-male.png"/>    
+                <p>
                     Actual stop and frisk incidents from the NYPD database in the selected month will be displayed on the map in the form of dots. Red dots represent an arrest, and yellow dots represent an unfruitful stop and frisk. 
                 </p>
             </div>
