--- a/writeup/index.html
+++ b/writeup/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Stop & Frisk</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -59,9 +59,6 @@
                         <a class="page-scroll" href="#methodology">Methodology</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#results">Results</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#download">Download</a>
                     </li>
                     <li>
@@ -97,7 +94,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
-                <p> For our final project for Brown University's <a href="http://cs.brown.edu/courses/csci1951-a/">cs1951a: Introduction to Data Science</a>, we chose to aggregate and analyze data relating to New York City's controversal practice of police searching citizens on the street without reason, known widely as "stop-and-frisk." </p>
+                <p> For our final project for Brown University's <a href="http://cs.brown.edu/courses/csci1951-a/">cs1951a: Introduction to Data Science</a>, we chose to aggregate data relating to New York City's controversal practice of police searching citizens on the street without reason, widely known as "stop-and-frisk." </p>
                 <p>We analyzed and visualized NY stop-and-frisk data to illuminate patterns and correlations between events across different factors and times.</p>
             </div>
         </div>
@@ -110,7 +107,7 @@
 
                 <a href="http://www.nyc.gov/html/nypd/html/analysis_and_planning/stop_question_and_frisk_report.shtml"> <h3>NYPD | Stop, Question and Frisk Report Database</h3></a>
                 <p>
-                    The stop-and-frisk dataset is rich and comprehensive, and contains over 5 million individual stop-and-frisk incidents from 2002 to 2014, in CSV format. We focused on the data from 2006-2014  (comprised 4,157,770 data points) because during this period, the exact location of the stop was available, allowing us to create fine-grained visualizations. This location data is stored in NY state coordinates, which had to be converted to be usable with our other data (using methods described below). This dataset required more cleaning than originally thought, as upon further inspection, some values were missing or unrealistic. 
+                    The stop-and-frisk dataset is rich, comprehensive, and contains over 5 million individual stop-and-frisk incidents from 2002 to 2014, in CSV format. We focused on the data from 2006-2014  (comprising of 4,157,770 data points) because during this period, the exact location of the stop was available, allowing us to create fine-grained visualizations. This location data is stored in NY state coordinates, which had to be converted to be usable with our other data (using methods described below). This dataset required more cleaning than originally thought, as upon further inspection, some values were missing or unrealistic. 
                 </p>
 
                 <h3>Census</h3>
@@ -175,101 +172,89 @@
             </div>
     </section>
 
-    <section id="results" class="container content-section text-center">
-        <div class="row">
-             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Results</h2>
-                <h3>Classifier Output</h3>
-                <table class="table">
-                    <tr>
-                        <th>Race/Sex</th>
-                        <th>Female</th>
-                        <th>Male</th>
-                    </tr>
-                    <tr>
-                        <th>Black</th>
-                        <td>0.619</td>
-                        <td>2.652</td>
-                    </tr>
-                    <tr>
-                        <th>White</th>
-                        <td>0.108</td>
-                        <td>0.910</td>
-                    </tr>
-                    <tr>
-                        <th>Hispanic</th>
-                        <td>0.291</td>
-                        <td>1.782</td>
-                    </tr>
-                    <tr>
-                        <th>Other</th>
-                        <td>0.122</td>
-                        <td>0.998</td>
-                    </tr>
-
-                </table>
-
-                <h3>Visualization</h3>
-                <h4>Map</h4>
-                <p>
-                    After the user interacts with the drop down options, the map will automatically be populated with a variety of related information.
-                </p><p>
-                    Individual census tracts will be colored to reflect the likelihood with which an individual with the selected characteristics would be stopped and frisked by an officer in relation to the average person, in the month selected on the timeline below. The darker the color, the more likely a stop, as shown by the key to the right of the map.
-                </p><p>
-                    Users can explore individual census tracts by hovering over them, which will bring up a tooltip explaining where the tract is, what the exact likelihood is, the average income of the tract, the number of stop and frisk complaints against NYPD for that year, and the racial distribution of the tract. They can also click to zoom in and focus on the tract.
-                </p><p>
-                    Actual stop and frisk incidents from the NYPD database in the selected month will be displayed on the map in the form of dots. Red dots represent an arrest, and yellow dots represent an unfruitful stop and frisk. 
-                </p>
-            </div>
-    </section>
-
     <!-- Download Section -->
     <section id="download" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>The Team</h2>
+                <ul class="list-inline">
+                    <li>
+                        <p>Alexa Van Hattum</br>
+                        login: avanhatt</br>
+                        focus: data cleaning</br>
+                        & machine learning
+                        </p>
+                    </li>
+                    <li>
+                        <p>Eden Weizman</br>
+                        login: eweizman</br>
+                        focus: front end</br>
+                        developement
+                        </p>
+                    </li>
+                    <li>
+                        <p>Samuel Kortchmar</br>
+                        login: skortchm</br>
+                        focus: app framework</br>
+                        & visualizations</p>
+                    </li>
+                    <li>
+                       <p> Wenyi Lu</br>
+                        login: wl58</br>
+                        focus: SQL </br>
+                        database</p>
+                    </li>
+                </ul>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
+    <!-- <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-9 col-lg-offset-2">
                 <h2>The Team</h2>
                 <ul class="list-inline">
                     <li>
                         <p>Alexa Van Hattum</br>
-                        CS login: </p>
+                        login: avanhatt</br>
+                        focus: data cleaning</br>
+                        & machine learning
+                        </p>
                     </li>
                     <li>
                         <p>Eden Weizman</br>
-                        CS login: eweizman</p>
+                        login: eweizman</br>
+                        focus: front end</br>
+                        developement
+                        </p>
                     </li>
                     <li>
                         <p>Samuel Kortchmar</br>
-                        CS login: </p>
+                        login: skortchm</br>
+                        focus: app framework</br>
+                        & visualizations</p>
                     </li>
                     <li>
                        <p> Wenyi Lu</br>
-                        CS login: </p>
+                        login: wl58</br>
+                        focus: database</br>
+                        & API</p>
                     </li>
                 </ul>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Map Section -->
-    <div id="map"></div>
+<!--     <div id="map"></div> -->
 
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
+            <p>Final Project Report, Spring 2015</p>
         </div>
     </footer>
 
