--- a/writeup/index.html
+++ b/writeup/index.html
@@ -100,7 +100,7 @@
         </div>
     </section>
 
-    <section id="datasets" class="container content-section text-center">
+    <section id="datasets" class="container content-section">
         <div class="row">
              <div class="col-lg-8 col-lg-offset-2">
                 <h2>Datasets</h2>
@@ -135,7 +135,7 @@
             </div>
     </section>
 
-    <section id="methodology" class="container content-section text-center">
+    <section id="methodology" class="container content-section">
         <div class="row">
              <div class="col-lg-8 col-lg-offset-2">
                 <h2>Methodology</h2>
@@ -188,7 +188,7 @@
             </div>
     </section>
 
-    <section id="challenges" class="container content-section text-center">
+    <section id="challenges" class="container content-section">
         <div class="row">
              <div class="col-lg-8 col-lg-offset-2">
                 <h2>Challenges</h2>
@@ -207,7 +207,7 @@
             </div>
     </section>
 
-    <section id="results" class="container content-section text-center">
+    <section id="results" class="container content-section">
         <div class="row">
              <div class="col-lg-8 col-lg-offset-2">
                 <h2>Results</h2>
@@ -267,7 +267,7 @@
             </div>
     </section>
 
-     <section id="review" class="container content-section text-center">
+     <section id="review" class="container content-section">
         <div class="row">
              <div class="col-lg-8 col-lg-offset-2">
                 <h2>Looking Back</h2>
@@ -283,7 +283,7 @@
             </div>
     </section>
 
-    <section id="future" class="container content-section text-center">
+    <section id="future" class="container content-section">
         <div class="row">
              <div class="col-lg-8 col-lg-offset-2">
                 <h2>Looking Forward</h2>
@@ -292,7 +292,7 @@
     </section>
     
     <!-- Download Section -->
-    <section id="contact" class="content-section text-center">
+    <section id="contact" class="content-section">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
