made names bold

--- a/writeup/index.html
+++ b/writeup/index.html
@@ -299,27 +299,27 @@
                     <h2>The Team</h2>
                 <ul class="list-inline">
                     <li>
-                        <p>Alexa Van Hattum</br>
+                        <p><b>Alexa Van Hattum</b></br>
                         login: avanhatt</br>
                         focus: data cleaning</br>
                         & machine learning
                         </p>
                     </li>
                     <li>
-                        <p>Eden Weizman</br>
+                        <p><b>Eden Weizman</b></br>
                         login: eweizman</br>
                         focus: front end</br>
                         developement
                         </p>
                     </li>
                     <li>
-                        <p>Samuel Kortchmar</br>
+                        <p><b>Samuel Kortchmar</b></br>
                         login: skortchm</br>
                         focus: app framework</br>
                         & visualizations</p>
                     </li>
                     <li>
-                       <p> Wenyi Lu</br>
+                       <p><b>Wenyi Lu</b></br>
                         login: wl58</br>
                         focus: SQL </br>
                         database</p>
