--- a/writeup/index.html
+++ b/writeup/index.html
@@ -296,8 +296,21 @@
                 <p>
                     Because of these holdups, other members of the group began completing other, independant portions of the project. These sections, such as timeline information, were integrated quite early despite initially being planned for the end.
                 </p>
+                <h4>UI Mockup</h4>
+                <p>
+                    We initially believed that 
+                </p>
+                <p>
+                    We also intended to give little profiles for the blend of characteristics which were overall most and least likely to be stopped. However, we felt as though this might be a bit contentious, and might make the user jump to assumptions that we didn't necessarily want them to make about our analysis. In addition to this, these profiles would not be very interesting once we shrunk our feature set.
+                </p>
                 <h3>What Worked?</h3>
                 <h3>What Didn't Work?</h3>
+                <p>
+                    We initially believed we would use a Naive Bayes classifier.
+                </p>
+                <p>
+                    We initally treated time as a vector, instead of separating it into buckets by month. For a while we believed this to be an effective strategy, but once more visualiztion components were complete, we realized that this was overgeneralizing trendlines, and underfitting to our data. It completely missed more subtle trends, prompting us to change how time was treated.
+                </p>
             </div>
     </section>
 
