--- a/writeup/index.html
+++ b/writeup/index.html
@@ -194,8 +194,12 @@
                 <p>
                    We used d3 to create a timeline with one static white line repesenting the total number of stop-and-frisks which happened each day over time.
                </p>
+               <img class="img-responsive center-block" src="img/timeline-15-white-male.png"/>
+               <h12 class="center-block text-center">Male, 15 Years Old, White</h12>
                <p>
-                The second blue line dynamically responds to the selected characteristics, showing how the chance of being stopped and frisked changes over time. This timeline lines up with the time slider, allowing the user to easily jump to points they might find interesting.
+                The second blue line dynamically responds to the selected characteristics, showing how the number of stop-and-frisks happening to an individual with the given characteristics changes over time. 
+                </p>
+                This timeline lines up with the time slider, allowing the user to easily jump to points they might find interesting.
                 </p>
             </div>
             </div>
