minor description changes

--- a/writeup/index.html
+++ b/writeup/index.html
@@ -197,9 +197,10 @@
                <img class="img-responsive center-block" src="img/timeline-15-white-male.png"/>
                <h12 class="center-block text-center">Male, 15 Years Old, White</h12>
                <p>
-                The second blue line dynamically responds to the selected characteristics, showing how the number of stop-and-frisks happening to an individual with the given characteristics changes over time. 
+                    The second blue line dynamically responds to the selected characteristics, showing how the number of stop-and-frisks happening to an individual with the given characteristics changes over time. The y axis for the blue line is displayed on the right.
                 </p>
-                This timeline lines up with the time slider, allowing the user to easily jump to points they might find interesting.
+                <p>
+                    This timeline lines up with the time slider, allowing the user to easily jump to points they might find interesting.
                 </p>
             </div>
             </div>
