--- a/writeup/index.html
+++ b/writeup/index.html
@@ -76,9 +76,10 @@
         <div class="intro-body">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
+                    <div class="col-md-9 col-md-offset-2">
                         <p class="intro-text">Analysis and Dynamic Visualization of</p>
-                        <h1 class="brand-heading">Stop & Frisk</h1>
+                        
+                        <h1 class="brand-heading"><img id="logo" src="img/logo.png">  Stop & Frisk</h1>
                         <p class="intro-text">Alexa Van Hattum, Eden Weizman, <br> Samuel Kortchmar, & Wenyi Lu</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
