--- a/writeup/index.html
+++ b/writeup/index.html
@@ -150,17 +150,26 @@
                 <h2>Methodology</h2>
                 <h3>Data Cleaning Pipeline</h3>
                 <p>
-                    For this project, data cleaning was an iterative process. We began by scraping the massive stop and frisk data files down to the relevant attributes. In that same process, we also noticed that some attributes had unrealist values - for example, an 'age' of '999'. We removed any such data points from consideration.
+                    For this project, data cleaning was an iterative process. We began by scraping the massive stop and frisk data files down to the relevant attributes. In that same process, we also noticed that some attributes had unrealistic values - for example, an 'age' of '999'. We removed any such data points from consideration.
                 </p>
                 <p>
-                    From there, much of the data cleaning involved integrating data from multiple sources. A Census tract, for example, was represented in different sources as a 6-character string, 7-character string, 9-character string, or 15-character string. Combing such data involved thoroughly researching various New York City and Census Borough representation practices. 
+                    From there, much of the data cleaning involved integrating data from multiple sources. A Census tract, for example, was represented in different sources as a 6-character string, 7-character string, 9-character string, or 15-character string. Combining such data involved thoroughly researching various New York City and Census Borough representation practices. 
                 </p>
-                <h3>Classifier</h3>
+                <h3>Machine Learning</h3>
                 <p>
-                    We used logistic regression on our input data to give the most viable prediction of chance of stop-and-frisk given a set of input characteristics chosen by the user. Dates are separated by month so that there will be a sufficient number of stop-and-frisk incidents for the classifier to create accurate inferences, while still retaining the ability to analyze a relatively fine-grained period of time. Age is treated as a vector, allowing for general trends to become prominent without overfitting to the specific ages of the people who were stopped in a narrow range of time, given that age can vary across a large range.
+                    One way to determine the probability of a person with certain characteristics to be stopped would be to count the number of such instances on that particular day, and compare that to the population of NYC. However, this approach would be highly susceptible to noise - looking at each day and characteristic individually may not reveal many trends. Instead, we decided to use machine learning to generate a classifier that could predict the probability of a given person being stopped. 
                 </p>
                 <p>
-                    If a feature is unspecified,the classifier is prompted to average out the probabilities of all values for that feature. Thus, if no features are selected, then the
+                    That being decided, we needed to manipulate our data into a format conducive to standard machine learning algorithms. See the “Challenges: Data Wrangling” section on the difficulty of deciding the best way to do this.  
+                </p>
+                <p>
+                    After researching similar problems, we ultimately decided to generate a representative sample of the NYC population to use as “negative” data points to weigh against the “positive” data points in the stop-and-frisk database. We combined one census table of sex and age by census tract and another of race by census tract, assuming the two were independently distributed. We used solely the 2010 census information and randomly scattered the negative data points throughout the relevant timeframe.  
+                </p>
+                <p>
+                   We then used logistic regression on our input data to give the most viable prediction of the probability of stop-and-frisk given a set of input characteristics chosen by the user. The classifier is trained on five attributes - year/month, age, race, sex, and census tract. However, we treated every vector but age as a series of binary indicator features. Dates are bucketed approximately by month so that there will be a sufficient number of stop-and-frisk incidents for the classifier to create accurate inferences, while still retaining the ability to analyze a relatively fine-grained period of time. Age is treated as a vector, allowing for general trends to become prominent without overfitting to the specific ages of the people who were stopped in a narrow range of time, given that age can vary across a large range. We used the DictVectorizer and LinearRegression modules of python's scikit-learn toolkit. 
+                </p>
+                <p>
+                    To make the resulting probabilities the most meaningful to viewers, we represented the probabilities as a likelihood given by the ratio of that person to the “average” New Yorker. This average was determined by comparing the number of negative and positive samples our classifier was trained on. For example, a likelihood of ‘2.5’ indicated that the probability of that individual being stopped is 2.5 times the probability of an average New Yorker being stopped. 
                 </p>
 
                 <h3>API</h3>
