moved logo below title

--- a/writeup/index.html
+++ b/writeup/index.html
@@ -79,7 +79,9 @@
                     <div class="col-md-9 col-md-offset-2">
                         <p class="intro-text">Analysis and Dynamic Visualization of</p>
                         
-                        <h1 class="brand-heading"><img id="logo" src="img/logo.png">  Stop & Frisk</h1>
+                        <h1 class="brand-heading">Stop & Frisk</h1>
+                        <img id="logo" src="img/logo.png">
+                        <p/>
                         <p class="intro-text">Alexa Van Hattum, Eden Weizman, <br> Samuel Kortchmar, & Wenyi Lu</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -423,6 +425,7 @@
     <footer>
         <div class="container text-center">
             <p>Final Project Report, Spring 2015</p>
+            <p>Logo Credit: ComplianceSigns, with a few edits</p>
         </div>
     </footer>
 
